--- a/src/paintclone/PaintCloneUI.fxml
+++ b/src/paintclone/PaintCloneUI.fxml
@@ -4,8 +4,11 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -17,15 +20,36 @@
    <top>
       <VBox BorderPane.alignment="CENTER">
          <children>
-            <MenuBar fx:id="menuBar" accessibleRole="IMAGE_VIEW">
-              
-            </MenuBar>
+            <MenuBar fx:id="menuBar" accessibleRole="IMAGE_VIEW" prefHeight="32.0" prefWidth="1280.0">
+               <menus>
+                  <Menu fx:id="fileMenu" mnemonicParsing="false" text="File">
+                    <items>
+                      <MenuItem fx:id="newMenuItem" mnemonicParsing="false" text="New..." />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem fx:id="openMenuItem" mnemonicParsing="false" text="Open..." />
+                        <MenuItem fx:id="saveAsMenuItem" mnemonicParsing="false" text="Save As..." />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem fx:id="exitMenuItem" mnemonicParsing="false" text="Exit" />
+                    </items>
+                  </Menu>
+                  <Menu fx:id="editMenu" mnemonicParsing="false" text="Edit">
+                    <items>
+                      <MenuItem fx:id="undoMenuItem" mnemonicParsing="false" text="Undo" />
+                        <MenuItem fx:id="redoMenuItem" mnemonicParsing="false" text="Redo" />
+                    </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="Tools">
+                    <items>
+                      <MenuItem fx:id="brushMenuItem" mnemonicParsing="false" text="Brush" />
+                    </items>
+                  </Menu>
+               </menus></MenuBar>
             <HBox />
          </children>
       </VBox>
    </top>
    <left>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
             <ColorPicker fx:id="colourPicker" />
             <Slider fx:id="sizeSlider" prefHeight="18.0" prefWidth="100.0">
@@ -35,6 +59,12 @@
             </Slider>
             <Label fx:id="labelSize" text="Size: 10" />
          </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+         <padding>
+            <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+         </padding>
       </VBox>
    </left>
    <bottom>
