--- a/src/paintclone/PaintCloneUI.fxml
+++ b/src/paintclone/PaintCloneUI.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -16,7 +18,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720" prefWidth="1280" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="paintclone.PaintCloneUIController">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720" prefWidth="1280" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="paintclone.PaintCloneUIController">
    <top>
       <VBox BorderPane.alignment="CENTER">
          <children>
@@ -40,7 +42,7 @@
                   </Menu>
                   <Menu mnemonicParsing="false" text="Tools">
                     <items>
-                      <MenuItem fx:id="brushMenuItem" mnemonicParsing="false" text="Brush" />
+                        <CheckMenuItem id="brushMenuItem" fx:id="brushMenuItem" mnemonicParsing="false" selected="true" text="Brush" />
                     </items>
                   </Menu>
                </menus></MenuBar>
@@ -58,6 +60,7 @@
                </VBox.margin>
             </Slider>
             <Label fx:id="labelSize" text="Size: 10" />
+            <Button fx:id="buttonTest" mnemonicParsing="false" text="B" />
          </children>
          <BorderPane.margin>
             <Insets />
